# ethos-u-core-software

./: .gitignore  CMakeLists.txt  README.md  cmsis.cmake  event_recorder.cmake  tensorflow.cmake  tflite_micro.cmake
applications/: CMakeLists.txt
applications/inference_process/: CMakeLists.txt
applications/inference_process/include/: inference_parser.hpp  inference_process.hpp
applications/inference_process/src/: inference_process.cc  inference_process.cpp  micro_mutable_all_ops_resolver.h
applications/message_process/: CMakeLists.txt
applications/message_process/include/: message_process.hpp
applications/message_process/src/: message_process.cc  message_process.cpp
cmake/toolchain/: arm-none-eabi-gcc.cmake  armclang.cmake
drivers/: CMakeLists.txt
drivers/mailbox/: CMakeLists.txt
drivers/mailbox/include/: mailbox.hpp
drivers/mailbox/src/: mailbox.cc  mailbox.cpp
drivers/mhu_dummy/: CMakeLists.txt
drivers/mhu_dummy/src/: mhu_dummy.cc
drivers/mhu_juno/: CMakeLists.txt
drivers/mhu_juno/src/: mhu_juno.cpp
drivers/mhu_v2/: CMakeLists.txt
drivers/mhu_v2/src/: mhu_v2.cpp
drivers/uart/src/: uart_cmsdk_apb.c
lib/: CMakeLists.txt
lib/arm_profiler/include/: arm_profiler.hpp
lib/arm_profiler/src/: arm_profiler.cpp
lib/ethosu_log/: CMakeLists.txt
lib/ethosu_log/include/: ethosu_log.h
lib/ethosu_monitor/include/: RTE_Components.h  ethosu_monitor.hpp
lib/ethosu_monitor/src/: ethosu_monitor.cpp
lib/ethosu_profiler/: CMakeLists.txt
lib/ethosu_profiler/include/: ethosu_profiler.hpp
lib/ethosu_profiler/src/: ethosu_profiler.cpp
lib/layer_by_layer_profiler/: CMakeLists.txt
lib/layer_by_layer_profiler/include/: layer_by_layer_profiler.hpp
lib/layer_by_layer_profiler/src/: layer_by_layer_profiler.cpp
lib/rte_component/include/: RTE_Components.h
openamp/: .clang-format  .gitignore  CMakeLists.txt
openamp/src/libmetal/: errno.h
openamp/src/system/freertos/cortexm/: sys.c  sys.h
openamp/src/system/generic/cortexm/: sys.c  sys.h
rtos/: CMakeLists.txt
rtos/freertos_config/: CMakeLists.txt  FreeRTOSConfig.h.in
